Table: Fix checkbox overflow

--- a/src/MudBlazor/Styles/components/_table.scss
+++ b/src/MudBlazor/Styles/components/_table.scss
@@ -109,8 +109,8 @@
   letter-spacing: 0.01071em;
   vertical-align: inherit;
 
-  & .mud-checkbox {
-    margin: -12px;
+  & .mud-checkbox > .mud-icon-button {
+    padding: 0px;
   }
 }
 
